--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,17 +3,16 @@ import HeaderLink from './HeaderLink.astro';
 import { SITE_TITLE } from '../consts';
 ---
 
-<header>
+<header class="fixed w-pq2 z-20 backdrop-blur-md">
+<div class="mx-auto max-w-3xl">
+<nav class="flex items-center gap-3 text-base">
 	<h2>
 		{SITE_TITLE}
-	</h2>
-	<nav>
-		<HeaderLink href="/">Home</HeaderLink>
-		<HeaderLink href="/blog">Blog</HeaderLink>
+	</h2 class="font-semibold tracking-tighter p-2 font-mplus text-lg">
 		<HeaderLink href="/about">About</HeaderLink>
-		<HeaderLink href="https://twitter.com/astrodotbuild" target="_blank">Twitter</HeaderLink>
-		<HeaderLink href="https://github.com/withastro/astro" target="_blank">GitHub</HeaderLink>
+		<HeaderLink href="https://github.com/withastro/astro" target="_blank">Source</HeaderLink>
 	</nav>
+  </div>
 </header>
 <style>
 	header {
