--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import Body from '../components/Body.astro'
 ---
 
 <!DOCTYPE html>
@@ -10,7 +11,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body>
+	<Body>
 		<Header title={SITE_TITLE} />
 		<main>
 			<h1 class="font-mplus text-4xl">🧑‍🚀 Hello, Astronaut!</h1>
@@ -45,6 +46,6 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
 			</p>
 		</main>
-		<footer/>
-	</body>
+		<Footer/>
+	</Body>
 </html>
