--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,22 +3,18 @@ import HeaderLink from './HeaderLink.astro';
 import { HOMEPAGE_URL } from '../config'
 ---
 
-<header class="fixed w-pq2 z-20 backdrop-blur-md">
+<header class="fixed w-full pq2 z-20 backdrop-blur-md">
 <div class="mx-auto max-w-3xl">
 <nav class="flex items-center gap-3 text-base">
    <h2 class="font-semibold tracking-tighter p-2 font-mplus text-lg">
      David Mills
 	</h2>
+    <div class="items-center gap-6 hidden md:flex"> 
 		<HeaderLink href={HOMEPAGE_URL}>About</HeaderLink>
 		<HeaderLink href="https://github.com/withastro/astro" target="_blank">Source</HeaderLink>
-	</nav>
+	  </div>
+    <div class="flex-1"></div>
+  </nav>
   </div>
 </header>
-<style>
-	header {
-		margin: 0em 0 2em;
-	}
-	h2 {
-		margin: 0.5em 0;
-	}
-</style>
+
