--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,7 @@
 ---
 import HeaderLink from './HeaderLink.astro';
 import { HOMEPAGE_URL } from '../config'
+import { IoLogoGithub } from 'react-icons/io5/index.js'
 ---
 
 <header class="fixed w-full pq2 z-20 backdrop-blur-md">
@@ -11,7 +12,7 @@ import { HOMEPAGE_URL } from '../config'
 	</h2>
     <div class="items-center gap-6 hidden md:flex"> 
 		<HeaderLink href={HOMEPAGE_URL}>About</HeaderLink>
-		<HeaderLink href="https://github.com/withastro/astro" target="_blank">Source</HeaderLink>
+		<HeaderLink href="https://github.com/withastro/astro" target="_blank"><IoLogoGithub />Source</HeaderLink>
 	  </div>
     <div class="flex-1"></div>
   </nav>
