--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,14 +2,18 @@
 import HeaderLink from './HeaderLink.astro';
 import { HOMEPAGE_URL } from '../config'
 import { IoLogoGithub } from 'react-icons/io5/index.js'
+import FootprintIcon from './icons/footprint';
 ---
 
 <header class="fixed w-full pq2 z-20 backdrop-blur-md">
 <div class="mx-auto max-w-3xl">
 <nav class="flex items-center gap-3 text-base">
+   <a href="/" class="group">
    <h2 class="font-semibold tracking-tighter p-2 font-mplus text-lg">
+     <FootprintIcon />
      David Mills
 	</h2>
+      </a>
     <div class="items-center gap-6 hidden md:flex"> 
 		<HeaderLink href={HOMEPAGE_URL}>About</HeaderLink>
 		<HeaderLink href="https://github.com/withastro/astro" target="_blank"><IoLogoGithub />Source</HeaderLink>
