--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,9 +3,10 @@ import HeaderLink from './HeaderLink.astro';
 import { HOMEPAGE_URL } from '../config'
 import { IoLogoGithub } from 'react-icons/io5/index.js'
 import FootprintIcon from './icons/footprint';
+import ThemeToggle from './ThemeToggleButton'
 ---
 
-<header class="fixed w-full pq2 z-20 backdrop-blur-md">
+<header class="fixed w-full p-2 z-20 backdrop-blur-md">
 <div class="mx-auto max-w-3xl">
 <nav class="flex items-center gap-3 text-base">
    <a href="/" class="group">
@@ -19,6 +20,7 @@ import FootprintIcon from './icons/footprint';
 		<HeaderLink href="https://github.com/withastro/astro" target="_blank"><IoLogoGithub />Source</HeaderLink>
 	  </div>
     <div class="flex-1"></div>
+    <ThemeToggle  client:load /> 
   </nav>
   </div>
 </header>
