--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,10 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import { SITE_TITLE, SITE_DESCRIPTION, HOMEPAGE_URL } from '../config'
 import Body from '../components/Body.astro'
 import Content from '../components/Content.astro';
+import { IoArrowForward } from 'react-icons/io5/index.js'
 ---
 
 <!DOCTYPE html>
@@ -18,7 +19,20 @@ import Content from '../components/Content.astro';
       <h1 class="font-mplus text-center">What I use</h1>
       <Content>
       <section>
-     <p class="mb-8 indent-4">Content</p> 
+     <p class="mb-8 indent-4">
+      As an indie developer, I&apos;ve been spending hours and hours at my
+            desk every day. So, I&apos;ve been continuously improving my
+            workspace in order to boost my productivity. Whenever I upload new
+            content, people ask me what tools I use. So, here is a living
+            snapshot and a place to point curious developers to when I get
+            asked. Most of the links are amazon affiliate links, so I'll
+            get filthy rich if you click them and buy something.
+            <a
+              class="inline-flex items-center gap-1 indent-1 text-orange-500"
+              href={HOMEPAGE_URL}
+              >Learn more about me <IoArrowForward className="inline" />
+            </a>
+     </p> 
       </section>
       </Content>
       </main>
