--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import { SITE_TITLE, SITE_DESCRIPTION, HOMEPAGE_URL } from '../config'
 import Body from '../components/Body.astro'
 import Content from '../components/Content.astro';
 import { IoArrowForward } from 'react-icons/io5/index.js'
+import Masthead from '../components/Masthead.astro'
 ---
 
 <!DOCTYPE html>
@@ -16,6 +17,7 @@ import { IoArrowForward } from 'react-icons/io5/index.js'
 	<Body>
 		<Header title={SITE_TITLE} />
       <main class="pt-[56px]">
+      <Masthead />
       <h1 class="font-mplus text-center">What I use</h1>
       <Content>
       <section>
