--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ import ThemeToggle from './ThemeToggleButton'
       </a>
     <div class="items-center gap-6 hidden md:flex"> 
 		<HeaderLink href={HOMEPAGE_URL}>About</HeaderLink>
-		<HeaderLink href="https://github.com/withastro/astro" target="_blank"><IoLogoGithub />Source</HeaderLink>
+		<HeaderLink href="https://github.com/Millz98" target="_blank"><IoLogoGithub />Source</HeaderLink>
 	  </div>
     <div class="flex-1"></div>
     <ThemeToggle  client:load /> 
