--- a/src/components/Masthead.astro
+++ b/src/components/Masthead.astro
@@ -1,10 +1,3 @@
----
-const isProd = import.meta.env.PROD
-const baseAssetUrl = isProd
-  ? 'https://craftzdog.global.ssl.fastly.net/uses'
-  : ''
----
-
 <section class="relative mb-6 h-80 flex justify-center items-center">
   <div class="absolute w-full h-full overflow-hidden">
     <video
@@ -14,12 +7,13 @@ const baseAssetUrl = isProd
       muted="muted"
       loop="loop"
       playsinline
-      ><source
-        src={baseAssetUrl + '/masthead.webm'}
+    >
+      <source
+        src="/video1.webm"
         type="video/webm; codecs=vp9"
       />
       <source
-        src={baseAssetUrl + '/masthead.m4v'}
+        src="/video1.mp4"
         type="video/mp4; codecs=hvc1"
       />
     </video>
@@ -27,7 +21,7 @@ const baseAssetUrl = isProd
   <div class="z-10 text-center px-8 drop-shadow-lg shadow-black">
     <div class="uppercase text-sm mb-4">Welcome to</div>
     <div class="text-4xl font-mplus font-medium">
-      A curated list of the tech I <span class="text-orange-500">use</span>
+      My journey into the world of <span class="text-orange-500">programming</span>
     </div>
   </div>
 </section>
