--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Masthead from '../components/Masthead.astro'
 		<Header title={SITE_TITLE} />
       <main class="pt-[56px]">
       <Masthead />
-      <h1 class="font-mplus text-center">What I use</h1>
+      <h1 class="font-mplus text-center">Hello, friend</h1>
       <Content>
       <section>
      <p class="mb-8 indent-4">
