--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,13 @@ import Body from '../components/Body.astro'
 import Content from '../components/Content.astro';
 import { IoArrowForward } from 'react-icons/io5/index.js'
 import Masthead from '../components/Masthead.astro'
+import { Image } from '@astrojs/image/components'
+
+const posts = (await Astro.glob('./posts/*.md')).sort(
+  (a: any, b: any) =>
+    new Date(b.frontmatter.createdAt).valueOf() -
+    new Date(a.frontmatter.createdAt).valueOf()
+)
 ---
 
 <!DOCTYPE html>
@@ -18,25 +25,35 @@ import Masthead from '../components/Masthead.astro'
 		<Header title={SITE_TITLE} />
       <main class="pt-[56px]">
       <Masthead />
-      <h1 class="font-mplus text-center">Hello, friend</h1>
+      <h1 class="font-mplus text-center">Hello, friend!</h1>
       <Content>
       <section>
      <p class="mb-8 indent-4">
-      As an indie developer, I&apos;ve been spending hours and hours at my
-            desk every day. So, I&apos;ve been continuously improving my
-            workspace in order to boost my productivity. Whenever I upload new
-            content, people ask me what tools I use. So, here is a living
-            snapshot and a place to point curious developers to when I get
-            asked. Most of the links are amazon affiliate links, so I'll
-            get filthy rich if you click them and buy something.
+        i have been on this coding journey for longer than 10 years, and i would like to make this blog all about the journey ahead. i can guarantee there will be lots of good times, lots of frustration, lots of new discoveries, and even lots of failures. but no matter what happens, i invite you to come along for the ride and see where this goes. 
             <a
               class="inline-flex items-center gap-1 indent-1 text-orange-500"
               href={HOMEPAGE_URL}
-              >Learn more about me <IoArrowForward className="inline" />
+              >learn more about me <IoArrowForward className="inline" />
             </a>
      </p> 
       </section>
-           </Content>
+      <section>
+      <ul class="grid grid-cols-1 md:grid-cols-2 gap-4">
+      {
+          posts.map(post => (
+          <li class="text-center mb-4">
+          <Image class="border" src={post.frontmatter.heroImage} width={720*2} aspectRatio={2.0} alt="thumbnail" />
+          <a href={post.url}>
+          <div class="mt-3 text-xl">{post.frontmatter.title}</div>
+          <div class="opacity-70">{post.frontmatter.description}</div>
+          </a>
+          </li>
+          ))
+        }
+        
+      </ul>
+      </section>
+      </Content>
       </main>
 		<Footer/>
 	</Body>
