--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,14 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import BaseHead from '../components/BaseHead.astro'
+import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro'
 import { SITE_TITLE, SITE_DESCRIPTION, HOMEPAGE_URL } from '../config'
 import Body from '../components/Body.astro'
-import Content from '../components/Content.astro';
+import Content from '../components/Content.astro'
 import { IoArrowForward } from 'react-icons/io5/index.js'
 import Masthead from '../components/Masthead.astro'
 import { Image } from '@astrojs/image/components'
+import CreatedWithSection from '../components/CreatedWithSection.astro'
 
 const posts = (await Astro.glob('./posts/*.md')).sort(
   (a: any, b: any) =>
@@ -18,43 +19,60 @@ const posts = (await Astro.glob('./posts/*.md')).sort(
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<Body>
-		<Header title={SITE_TITLE} />
-      <main class="pt-[56px]">
+  <head>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+  </head>
+  <Body>
+    <Header title={SITE_TITLE} />
+    <main class="pt-[56px]">
       <Masthead />
-      <h1 class="font-mplus text-center">Hello, friend!</h1>
       <Content>
-      <section>
-     <p class="mb-8 indent-4">
-        i have been on this coding journey for longer than 10 years, and i would like to make this blog all about the journey ahead. i can guarantee there will be lots of good times, lots of frustration, lots of new discoveries, and even lots of failures. but no matter what happens, i invite you to come along for the ride and see where this goes. 
+        <section>
+          <p class="mb-8 indent-4">
+            As an indie developer, I&apos;ve been spending hours and hours at my
+            desk every day. So, I&apos;ve been continuously improving my
+            workspace in order to boost my productivity. Whenever I upload new
+            content, people ask me what tools I use. So, here is a living
+            snapshot and a place to point curious developers to when I get
+            asked. Most of the links are amazon affiliate links, so I&apos;ll
+            get filthy rich if you click them and buy something.
             <a
               class="inline-flex items-center gap-1 indent-1 text-orange-500"
               href={HOMEPAGE_URL}
-              >learn more about me <IoArrowForward className="inline" />
+              >Learn more about me <IoArrowForward className="inline" />
             </a>
-     </p> 
-      </section>
-      <section>
-      <ul class="grid grid-cols-1 md:grid-cols-2 gap-4">
-      {
-          posts.map(post => (
-          <li class="text-center mb-4">
-          <Image class="border" src={post.frontmatter.heroImage} width={720*2} aspectRatio={2.0} alt="thumbnail" />
-          <a href={post.url}>
-          <div class="mt-3 text-xl">{post.frontmatter.title}</div>
-          <div class="opacity-70">{post.frontmatter.description}</div>
-          </a>
-          </li>
-          ))
-        }
-        
-      </ul>
-      </section>
+          </p>
+        </section>
+        <section>
+          <ul class="grid grid-cols-1 md:grid-cols-2 gap-4">
+            {
+              posts.map(post => (
+                <li class="text-center mb-4">
+                  <a href={post.url}>
+                    <Image
+                      class="border border-slate-300 dark:border-zinc-700 rounded-xl"
+                      src={post.frontmatter.heroImage}
+                      width={720 * 2}
+                      aspectRatio={2.0}
+                      alt="Thumbnail"
+                    />
+                    <div class="mt-3 text-xl font-bold">
+                      {post.frontmatter.title}
+                    </div>
+                    {post.frontmatter.description && (
+                      <div class="opacity-70">
+                        {post.frontmatter.description}
+                      </div>
+                    )}
+                  </a>
+                </li>
+              ))
+            }
+          </ul>
+        </section>
+        <CreatedWithSection />
       </Content>
-      </main>
-		<Footer/>
-	</Body>
+    </main>
+    <Footer />
+  </Body>
 </html>
