--- a/src/components/CreatedWithSection.astro
+++ b/src/components/CreatedWithSection.astro
@@ -14,7 +14,7 @@ import { Image } from '@astrojs/image/components'
   <a href="https://www.inkdrop.app/">
      <Image
       class="border border-slate-300 dark:border-zinc-700 rounded-xl"
-      src="/public/inkdrop-banner.jpg"
+      src="/inkdrop-banner.jpg"
       width={720 * 2}
       aspectRatio={2.0}
       alt="Inkdrop banner"
@@ -27,7 +27,7 @@ import { Image } from '@astrojs/image/components'
   <a href="https://astro.build/">
      <Image
       class="border border-slate-300 dark:border-zinc-700 rounded-xl"
-      src="/public/astrojs.jpg"
+      src="/astrojs.jpg"
       width={720 * 2}
       aspectRatio={2.0}
       alt="AstroJS banner"
