--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,12 +7,12 @@ import Body from '../components/Body.astro'
 import Content from '../components/Content.astro'
 import { IoArrowForward } from 'react-icons/io5/index.js'
 import Masthead from '../components/Masthead.astro'
-import { Image } from '@astrojs/image/components'
+import { Image } from '@astrojs/image/components';
 
 const posts = (await Astro.glob('./posts/*.md')).sort(
   (a: any, b: any) =>
-    new Date(b.frontmatter.createdAt).valueOf() -
-    new Date(a.frontmatter.createdAt).valueOf()
+    new Date(b.frontmatter.pubDate).valueOf() -
+    new Date(a.frontmatter.pubDate).valueOf()
 )
 ---
 
