chore(dev): modifications

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -10,9 +10,9 @@ export interface Props {
   content: {
     title: string
     description: string
-    createdAt?: string
-    updatedAt?: string
-    heroImage?: string
+    createdAt: string
+    updatedAt: string
+    heroImage: string
     tags: string[]
   }
 }
