--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,8 @@ import Body from '../components/Body.astro'
 import Content from '../components/Content.astro'
 import { IoArrowForward } from 'react-icons/io5/index.js'
 import Masthead from '../components/Masthead.astro'
-import { Image } from '@astrojs/image/components';
+import { Image } from '@astrojs/image/components'
+import CreatedWithSection from '../components/CreatedWithSection.astro'
 
 const posts = (await Astro.glob('./posts/*.md')).sort(
   (a: any, b: any) =>
@@ -69,7 +70,8 @@ const posts = (await Astro.glob('./posts/*.md')).sort(
             }
           </ul>
         </section>
-        </Content>
+        <CreatedWithSection />
+      </Content>
     </main>
     <Footer />
   </Body>
