fix(dev): remove text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ const posts = (await Astro.glob('./posts/*.md')).sort(
             <a
               class="inline-flex items-center gap-1 indent-1 text-orange-500"
               href={HOMEPAGE_URL}
-              >Learn more about me <IoArrowForward className="inline" />
+              > <IoArrowForward className="inline" />
             </a>
           </p>
         </section>
