--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,14 +29,8 @@ const posts = (await Astro.glob('./posts/*.md')).sort(
       <Content>
         <section>
           <p class="mb-8 indent-4">
-            As an indie developer, I&apos;ve been spending hours and hours at my
-            desk every day. So, I&apos;ve been continuously improving my
-            workspace in order to boost my productivity. Whenever I upload new
-            content, people ask me what tools I use. So, here is a living
-            snapshot and a place to point curious developers to when I get
-            asked. Most of the links are amazon affiliate links, so I&apos;ll
-            get filthy rich if you click them and buy something.
-            <a
+          i have been on this coding journey for longer than 10 years, and i would like to make this blog all about the journey ahead. i can guarantee there will be lots of good times, lots of frustration, lots of new discoveries, and even lots of failures. but no matter what happens, i invite you to come along for the ride and see where this goes. 
+              <a
               class="inline-flex items-center gap-1 indent-1 text-orange-500"
               href={HOMEPAGE_URL}
               > 
