fixed welcome text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const posts = (await Astro.glob('./posts/*.md')).sort(
       <Content>
         <section>
           <p class="mb-8 indent-4">
-          i have been on this coding journey for longer than 10 years, and i would like to make this blog all about the journey ahead. i can guarantee there will be lots of good times, lots of frustration, lots of new discoveries, and even lots of failures. but no matter what happens, i invite you to come along for the ride and see where this goes. 
+          i have been on this coding journey for longer than 10 years, and I would like to make this blog all about the journey ahead. I can guarantee there will be lots of good times, lots of frustration, lots of new discoveries, and even lots of failures. but no matter what happens, I invite you to come along for the ride and see where this goes. 
               <a
               class="inline-flex items-center gap-1 indent-1 text-orange-500"
               href={HOMEPAGE_URL}
